# notification-microservices

./: .gitignore  README.md  SendServices.sln  docker-compose.yml  docker-compose.yml~  example.env
SendServices/: Dockerfile  EmailChannel.cs  ISendingChannel.cs  NotificationGateway.cs  Program.cs  SendServices.csproj  testRequest.json
SendServices/Kafka/: KafkaProducer.cs  NotificationConsumer.cs  NotificationMessage.cs  NotificationSerialization.cs  ProducerFromHell.cs
SendServices/SendingChannels/: EmailChannel.cs  TelegramChannel.cs
api/: .pre-commit-config.yaml  .pre-commit-hooks.yaml  CONTRIBUTING.md  Dockerfile  alembic.ini  database.py  docker-entrypoint.sh  enums.py  main.py  pyproject.toml  settings.py
api/migrations/: env.py
api/migrations/versions/: 2024_12_21_2225-d7ff1e5d12ac_add_esb_request.py
api/src/: dependencies.py
api/src/broker/: broker.py  consumer.py  producer.py
api/src/models/: __init__.py  base.py  esb_request.py
api/src/routes/: api.py
api/src/schemas/: base.py  email.py  message.py  tg.py
api/src/services/: base.py  esb_request.py
api/src/services/repositories/: base.py  esb_message.py
channels/email/: Dockerfile
configs/: prometheus.yml
