[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "advanced-alchemy>=0.26.2",
    "alembic>=1.14.0",
    "alembic-postgresql-enum>=1.4.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.6",
    "faststream[kafka]>=0.5.33",
    "phonenumbers>=8.13.52",
    "pydantic-extra-types>=2.10.1",
    "pydantic-settings>=2.7.0",
    "pydantic[email]>=2.10.4",
    "sqlalchemy[asyncio]>=2.0.36",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "ruff>=0.8.4",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
